--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -3,11 +3,11 @@
 ; http://doc.qt.io/qt-5/qtquickcontrols2-styles.html
 
 [Controls]
-Style=Universal
+Style=Material
 
 [Universal]
 Theme=Light
-Accent=Steel
+;Accent=Steel
 
 [Material]
 Theme=Light
