--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -3,7 +3,7 @@
 ; http://doc.qt.io/qt-5/qtquickcontrols2-styles.html
 
 [Controls]
-Style=Material
+Style=Default
 
 [Universal]
 Theme=Light
@@ -11,5 +11,5 @@ Theme=Light
 
 [Material]
 Theme=Light
-Accent=BlueGrey
+;Accent=BlueGrey
 ;Primary=BlueGray
