--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.autosave
 *.a
 *.core
+.qmake.stash
 *.moc
 *.o
 *.obj
@@ -27,6 +28,7 @@ Makefile*
 *.prl
 *.app
 moc_*.cpp
+moc_*.h
 ui_*.h
 qrc_*.cpp
 Thumbs.db
